--- a/css/cmn/utils.css
+++ b/css/cmn/utils.css
@@ -49,7 +49,7 @@ body {
     border: 2px solid #4280ed;
     border-left: 0;
     box-sizing: border-box;
-    background-color: #66FFCC;
+    background-color: #f9ec16;
 
     border-radius: 0 4px 4px 0;
     text-indent: -200em;
