--- a/css/cmn/utils.css
+++ b/css/cmn/utils.css
@@ -1,4 +1,4 @@
-
+/*地图容器*/
 body {
     margin:0px;
     padding:0px;
@@ -10,6 +10,7 @@ body {
     right:0px;
     left:0px;
 }
+/*搜索框*/
 #searchPanel{
     position: absolute;
     margin-left: 250px;
