--- a/plugins/draw/leaflet.draw-src.css
+++ b/plugins/draw/leaflet.draw-src.css
@@ -22,17 +22,27 @@
     border-bottom-right-radius: 0;
 }
 
-.leaflet-draw-toolbar a {
-    background-image: url('images/spritesheet.png');
-    background-image: linear-gradient(transparent, transparent), url('images/spritesheet.svg');
-    background-repeat: no-repeat;
-    background-size: 270px 30px;
-    background-clip: padding-box;
-}
+/*.leaflet-draw-toolbar a {*/
+    /*background-image: url('images/spritesheet.png');*/
+    /*background-image: linear-gradient(transparent, transparent), url('images/spritesheet.svg');*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: 270px 30px;*/
+    /*background-clip: padding-box;*/
+/*}*/
 
-.leaflet-retina .leaflet-draw-toolbar a {
-    background-image: url('images/spritesheet-2x.png');
-    background-image: linear-gradient(transparent, transparent), url('images/spritesheet.svg');
+/*.leaflet-retina .leaflet-draw-toolbar a {*/
+    /*background-image: url('images/spritesheet-2x.png');*/
+    /*background-image: linear-gradient(transparent, transparent), url('images/spritesheet.svg');*/
+/*}*/
+
+.leaflet-draw-toolbar .leaflet-draw-measure-polyline {
+    background-image: url('../../img/tool/dismeasure.png');
+}
+.leaflet-draw-toolbar .leaflet-draw-measure-polygon {
+    background-image: url('../../img/tool/areameasure.png');
+}
+.leaflet-draw-toolbar .leaflet-draw-measure-remove {
+    background-image: url('../../img/tool/remove.png');
 }
 
 .leaflet-draw a {
@@ -297,6 +307,7 @@
     cursor: pointer;
 }
 
+
 /* ================================================================== */
 /* Old IE styles
 /* ================================================================== */
@@ -304,3 +315,4 @@
 .leaflet-oldie .leaflet-draw-toolbar {
     border: 1px solid #999;
 }
+
