--- a/plugins/draw/leaflet.draw-src.css
+++ b/plugins/draw/leaflet.draw-src.css
@@ -235,11 +235,11 @@
 
 .leaflet-draw-tooltip {
     background: rgb(54, 54, 54);
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.7);
     border: 1px solid transparent;
     -webkit-border-radius: 4px;
     border-radius: 4px;
-    color: #fff;
+    color: #ffffff;
     font: 12px/18px "Helvetica Neue", Arial, Helvetica, sans-serif;
     margin-left: 20px;
     margin-top: -21px;
@@ -276,7 +276,8 @@
 }
 
 .leaflet-draw-tooltip-subtext {
-    color: #f8d5e4;
+    color: #f9ec16;
+    font-weight: bold;
 }
 
 .leaflet-draw-guide-dash {
