--- a/css/cmn/utils.css
+++ b/css/cmn/utils.css
@@ -97,3 +97,8 @@ input:focus {
     background: rgba(255, 255, 255, 0.8);
     font-weight: bold;
 }
+/*加载*/
+#loadingPanel {
+    display: none;
+    z-index: 1000;
+}
